--- a/babelPage/src/styles/styles.css
+++ b/babelPage/src/styles/styles.css
@@ -84,8 +84,8 @@ img {
 
 .colaboradores {
     text-align: center;
-    background-color: #1f2839;
-    color: white;
+    
+    color: black;
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
     font-weight: 100;
@@ -106,8 +106,6 @@ ul {
     /* Centrar verticalmente */
     min-height: 5vh;
     /* Altura mínima del contenedor para ocupar toda la pantalla */
-    background-color: #3e4d64;
-    /* Fondo para resaltar el contenido */
 }
 
 .logoTable {
@@ -138,8 +136,6 @@ ul {
     /* Espaciado interno */
     background-color: #f9f9f9;
     /* Fondo claro */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    /* Sombra sutil */
 }
 
 .logoTable img {
@@ -194,4 +190,22 @@ ul {
     height: 100%;
     object-fit: cover;
     filter:brightness(0.6);
+}
+
+/*Icon table*/
+.logoSectors{
+    display: flex;
+
+    display: grid;
+    /* Usamos grid para el diseño en columnas */
+    grid-template-columns: repeat(2, 1fr);
+    /* Tres columnas */
+    gap: 20px;
+    /* Espaciado entre elementos */
+    list-style: none;
+    /* Eliminar los puntos de la lista */
+    padding: 0;
+    /* Eliminar padding predeterminado de ul */
+    margin: 0;
+    /* Eliminar margen predeterminado de ul */
 }
