--- a/babelPage/src/styles/styles.css
+++ b/babelPage/src/styles/styles.css
@@ -70,21 +70,8 @@ img {
     }
 }
 
-.contenedor_portada {
-    display: flex;
-    align-items: center;
-    width: auto;
-    height: 600px;
-}
-
-.portada {
-    width: 100%;
-    height: 100%;
-}
-
 .colaboradores {
     text-align: center;
-    
     color: black;
     font-family: "Exo 2", sans-serif;
     font-optical-sizing: auto;
@@ -100,7 +87,7 @@ ul {
 .container {
     display: flexbox;
     /* Usamos Flexbox para centrar */
-    justify-content: center;
+    justify-content: left;
     /* Centrar horizontalmente */
     align-items: center;
     /* Centrar verticalmente */
@@ -108,21 +95,7 @@ ul {
     /* Altura mínima del contenedor para ocupar toda la pantalla */
 }
 
-.logoTable {
-    display: flex;
-    display: grid;
-    /* Usamos grid para el diseño en columnas */
-    grid-template-columns: repeat(5, 1fr);
-    /* Tres columnas */
-    gap: 20px;
-    /* Espaciado entre elementos */
-    list-style: none;
-    /* Eliminar los puntos de la lista */
-    padding: 0;
-    /* Eliminar padding predeterminado de ul */
-    margin: 0;
-    /* Eliminar margen predeterminado de ul */
-}
+
 
 .logoTable li {
     display: flexbox;
@@ -138,29 +111,7 @@ ul {
     /* Fondo claro */
 }
 
-.logoTable img {
-    max-width: 100px;
-    /* Controlar el tamaño máximo del logo */
-    height: 85px;
-    /* Mantener proporciones */
-    margin-bottom: 10px;
-    /* Espaciado entre el logo y el texto */
-}
 
-.logoTable p {
-    font-size: 16px;
-    /* Tamaño de letra */
-    color: #333;
-    /* Color del texto */
-    margin: 0;
-    /* Eliminar márgenes predeterminados */
-    font-weight: 600;
-    /* Texto semi-negrita */
-    font-family: "Exo 2", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-}
 
 @media (max-width: 768px) {
     .logoTable {
@@ -181,7 +132,7 @@ ul {
     }
 }
 
-
+/*Esti de la imagen del carusel de la portada*/
 .c-item{
     height: 480px;
 }
@@ -192,20 +143,28 @@ ul {
     filter:brightness(0.6);
 }
 
-/*Icon table*/
-.logoSectors{
-    display: flex;
 
-    display: grid;
-    /* Usamos grid para el diseño en columnas */
-    grid-template-columns: repeat(2, 1fr);
-    /* Tres columnas */
-    gap: 20px;
-    /* Espaciado entre elementos */
-    list-style: none;
-    /* Eliminar los puntos de la lista */
-    padding: 0;
-    /* Eliminar padding predeterminado de ul */
-    margin: 0;
-    /* Eliminar margen predeterminado de ul */
-}
+
+
+
+
+.split-section {
+    background-color: #f8f9fa; /* Fondo suave */
+  }
+  
+  .text-content {
+    padding: 20px;
+  }
+  
+  .image-content img {
+    object-fit: cover; /* Evita la distorsión */
+    max-height: 400px; /* Limita la altura máxima */
+    width: 100%; /* Asegura que ocupe el ancho completo del contenedor */
+    border-radius: 10px; /* Esquinas redondeadas */
+  }
+  
+  @media (max-width: 768px) {
+    .image-content img {
+      max-height: 250px; /* Ajusta el tamaño de la imagen en pantallas pequeñas */
+    }
+  }
